@@ -34,7 +34,7 @@ s-gtplsp.o\
 s-gartcp.o
 
 TCPSOURCES = \
-          s-gtplsp.ads ${TCP_PLATFORM_SOURCE} \
+${TCP_PLATFORM_SOURCES}                       \
 ${srcdir}/s-gartcp.ads ${srcdir}/s-gartcp.adb
 
 NOBLTCPOBJECTS = \
@@ -140,22 +140,22 @@ $(FILTERSSOURCES) \
 $(COMMONSOURCES)
 
 CLEANFILES = *.ali s-garcon.ads *.o s-gaprco.adb s-galiop.ads\
-	s-garser.adb s-gaplsp.ads $(FILTERSOBJECTS) split s-rpcdum.ads\
+	s-garser.adb s-gaplsp.ads $(FILTERSOBJECTS) split\
 	inlining gnatlib/* constants_nodef\
 	b_*.c isthrbio${EXEEXT}
 
-DISTCLEANFILES = config.h s-gtplsp.ads ${TCP_PLATFORM_SOURCE} s-gatcop.ads \
+DISTCLEANFILES = config.h ${TCP_PLATFORM_SOURCES} s-gatcop.ads \
 	Makefile.fil
 
 SUFFIXES = .adb .ads .ali .o .xrb
 
-isthrbio${EXEEXT}: ${srcdir}/isthrbio.adb Makefile ${TCP_PLATFORM_SOURCE}
+isthrbio${EXEEXT}: ${srcdir}/isthrbio.adb Makefile ${TCP_PLATFORM_SOURCES}
 	${GNATMAKE} -a ${CFLAGS} ${INCFLAGS} ${GNATFLAGS} -I${srcdir} -I. \
 		${srcdir}/isthrbio.adb
 
-s-gtplsp.o: ${TCP_PLATFORM_SOURCE}
+s-gtplsp.o: ${TCP_PLATFORM_SOURCES}
 	${ADA_FOR_TARGET} -c ${CFLAGS} ${INCFLAGS} ${GNATFLAGS} \
-		${TCP_PLATFORM_SOURCE}
+		`echo ${TCP_PLATFORM_SOURCES} | ${SED} -e 's/ .*$$//'`
 
 %.o: %.adb
 	${ADA_FOR_TARGET} -c ${CFLAGS} ${INCFLAGS} ${GNATFLAGS} $<
@@ -220,25 +220,16 @@ s-gatcop.ads: Makefile
 
 s-gatcop.o: ${srcdir}/s-garthi.ads ${srcdir}/s-ganobl.adb
 
-${TCP_PLATFORM_SOURCE}: ${S_GTPLSP_ADS} ${S_GTPLSP_ADB}
+${TCP_PLATFORM_SOURCES}: ${S_GTPLSP_ADS} ${S_GTPLSP_ADB}
 	cp ${srcdir}/${S_GTPLSP_ADS} s-gtplsp.ads
 	@if test -n "${S_GTPLSP_ADB}"; then \
 	  cp ${srcdir}/${S_GTPLSP_ADB} s-gtplsp.adb; \
 	fi
 
-${S_GTPLSP_ADS}: ${S_GTPLSP_ADB}
-
 split: ${srcdir}/split.adb
 	$(GNATMAKE) -m -o split ${srcdir}/split.adb
 
 all-local: ${SOURCES} ${OBJECTS} ${LINKTEST}
-
-s-rpcdum.ads: ${SOURCES} Makefile
-	@grep "^package " ${SOURCES} |\
-	${AWK} '{if ($$2 != "body") {print "with " $$2 ";" } else {print "with " $$3 ";" }}' |\
-	sort -u > s-rpcdum.ads
-	@echo "private package System.RPC.Dummy is" >> s-rpcdum.ads
-	@echo "end System.RPC.Dummy;" >> s-rpcdum.ads
 
 install-dirs-local:
 	-rm -rf ${GARLIC}
@@ -327,50 +318,3 @@ depend: $(SOURCES)
 ### dependencies or to use the "fast" target.
 ###
 ### DO NOT REMOVE THIS LINE, IT IS USED BY MAKEDEPEND ###
-isthrbio.o: isthrbio.adb s-garlic.ads s-gtplsp.ads s-garthi.ads
-linktest.o: linktest.adb s-garlic.ads s-gardeb.ads s-garloc.ads s-ganobl.ads s-gastha.ads s-garstr.ads s-garter.ads s-garthi.ads s-garuti.ads s-parint.ads s-rpc.ads
-s-gafizi.o: s-garlic.ads s-gardeb.ads s-garfil.ads s-gafizi.ads s-gafizi.adb s-garhea.ads s-gaphlo.ads s-garpro.ads s-gastha.ads s-garstr.ads s-gartyp.ads s-garuti.ads
-s-galiop.o: s-garlic.ads s-galiop.ads
-s-galite.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-galite.ads s-galite.adb s-gaphlo.ads s-garpro.ads s-gasoli.ads s-gastha.ads s-garstr.ads s-gartyp.ads s-garuti.ads
-s-ganata.o: s-garlic.ads s-gardeb.ads s-ganata.ads s-ganata.adb s-gasoli.ads s-gartab.ads s-gartab.adb s-garuti.ads
-s-ganeut.o: s-garlic.ads s-gardeb.ads s-ganeut.ads s-ganeut.adb s-garthi.ads
-s-ganobl.o: s-garlic.ads s-garcon.ads s-gardeb.ads s-ganobl.ads s-ganobl.adb s-garpri.ads s-garpro.ads s-gasoli.ads s-gastha.ads s-garstr.ads s-gartcp.ads s-gatcop.ads s-garthi.ads s-gartyp.ads s-garuti.ads
-s-gaphlo.o: s-garlic.ads s-gardeb.ads s-gaphlo.ads s-gaphlo.adb s-garpro.ads s-gastha.ads s-garstr.ads s-gartyp.ads s-garuti.ads
-s-gaplsp.o: s-garlic.ads s-gaplsp.ads
-s-gaprco.o: s-garlic.ads s-gardeb.ads s-garpro.ads s-gaprco.ads s-gaprco.adb s-garrep.ads s-gastha.ads s-garstr.ads s-gartcp.ads s-gartyp.ads s-garuti.ads
-s-garcon.o: s-garlic.ads s-garcon.ads
-s-gardeb.o: s-garlic.ads s-gardeb.ads s-gardeb.adb s-gaplsp.ads
-s-garela.o: s-garlic.ads s-gardeb.ads s-garela.ads s-garela.adb s-garopt.ads s-gastha.ads s-garstr.ads s-gartyp.ads s-garuti.ads
-s-garexc.o: s-garlic.ads s-garexc.ads s-garexc.adb
-s-garfil.o: s-garlic.ads s-gardeb.ads s-garfil.ads s-garfil.adb s-garhea.ads s-ganata.ads s-garpar.ads s-gaphlo.ads s-garpro.ads s-gasoli.ads s-gastha.ads s-garstr.ads s-gartab.ads s-gartab.adb s-gartyp.ads s-garuti.ads
-s-gargro.o: s-garlic.ads s-gardeb.ads s-gargro.ads s-gargro.adb s-garhea.ads s-ganata.ads s-garpar.ads s-gaphlo.ads s-garpro.ads s-gastha.ads s-garstr.ads s-gartab.ads s-gartyp.ads s-garuti.ads
-s-garhea.o: s-garlic.ads s-gardeb.ads s-garfil.ads s-garhea.ads s-garhea.adb s-galiop.ads s-ganata.ads s-garopt.ads s-garpar.ads s-gaphlo.ads s-garpro.ads s-gasoli.ads s-gastha.ads s-garstr.ads s-gartab.ads s-gartra.ads s-gartyp.ads s-garuti.ads
-s-garlic.o: s-garlic.ads
-s-garloc.o: s-garlic.ads s-gardeb.ads s-garloc.ads s-garloc.adb s-gasoli.ads s-garuti.ads
-s-garnam.o: s-garlic.ads s-garcon.ads s-gardeb.ads s-garnam.ads s-garnam.adb s-garthi.ads s-garuti.ads
-s-garopt.o: s-garlic.ads s-gardeb.ads s-garopt.ads s-garopt.adb s-gaplsp.ads s-gastha.ads s-garstr.ads s-gartyp.ads s-garuti.ads
-s-garpar.o: s-garlic.ads s-gardeb.ads s-gargro.ads s-garhea.ads s-ganata.ads s-garopt.ads s-garpar.ads s-garpar.adb s-gaphlo.ads s-garpro.ads s-gasoli.ads s-gastha.ads s-garstr.ads s-gartab.ads s-gartab.adb s-gartyp.ads s-garuti.ads
-s-garpri.o: s-garlic.ads s-garpri.ads
-s-garpro.o: s-garlic.ads s-gardeb.ads s-garpro.ads s-garpro.adb s-gastha.ads s-garstr.ads s-gartyp.ads s-garuti.ads
-s-garrem.o: s-garlic.ads s-garcon.ads s-gardeb.ads s-ganata.ads s-garnam.ads s-garpar.ads s-gaphlo.ads s-gaplsp.ads s-garpro.ads s-garrem.ads s-garrem.adb s-gastha.ads s-garstr.ads s-gartab.ads s-garthi.ads s-gartyp.ads s-garuti.ads
-s-garrep.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-garopt.ads s-gaphlo.ads s-garpro.ads s-garrep.ads s-garrep.adb s-gastha.ads s-garstr.ads s-gartra.ads s-gartyp.ads s-garuti.ads
-s-garser.o: s-garlic.ads s-gardeb.ads s-garopt.ads s-garrem.ads s-garser.ads s-garser.adb s-gastha.ads s-garstr.ads s-gartyp.ads s-garuti.ads
-s-garsta.o: s-garlic.ads s-gardeb.ads s-garela.ads s-garexc.ads s-garfil.ads s-gargro.ads s-garhea.ads s-garopt.ads s-gaphlo.ads s-garpro.ads s-gaprco.ads s-garser.ads s-gasoli.ads s-garsta.ads s-garsta.adb s-gastha.ads s-garstr.ads s-gartab.ads s-gartra.ads s-gartyp.ads s-garuni.ads s-garuti.ads
-s-garstr.o: s-garlic.ads s-gardeb.ads s-gastha.ads s-gastha.adb s-garstr.ads s-garstr.adb s-garuti.ads
-s-gartab.o: s-garlic.ads s-gardeb.ads s-ganata.ads s-gasoli.ads s-gartab.ads s-gartab.adb s-garuti.ads
-s-gartcp.o: s-garlic.ads s-garcon.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-garnam.ads s-ganeut.ads s-garopt.ads s-garpar.ads s-gaphlo.ads s-garpri.ads s-garpro.ads s-gasoli.ads s-gastha.ads s-garstr.ads s-gartab.ads s-gartcp.ads s-gartcp.adb s-gatcop.ads s-gtplsp.ads s-garthi.ads s-gartyp.ads s-garuti.ads
-s-garter.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-garopt.ads s-garpar.ads s-gaphlo.ads s-garpro.ads s-gasoli.ads s-gastha.ads s-garstr.ads s-gartab.ads s-garter.ads s-garter.adb s-gartyp.ads s-garuti.ads
-s-garthi.o: s-garlic.ads s-garthi.ads
-s-gartra.o: s-garlic.ads s-gardeb.ads s-garopt.ads s-gastha.ads s-garstr.ads s-gartra.ads s-gartra.adb s-gartyp.ads s-garuti.ads
-s-gartyp.o: s-garlic.ads s-gardeb.ads s-gastha.ads s-garstr.ads s-gartyp.ads s-gartyp.adb s-garuti.ads
-s-garuni.o: s-garlic.ads s-gardeb.ads s-gargro.ads s-garhea.ads s-ganata.ads s-garopt.ads s-garpar.ads s-gaphlo.ads s-garpro.ads s-gasoli.ads s-gastha.ads s-garstr.ads s-gartab.ads s-gartab.adb s-gartyp.ads s-garuni.ads s-garuni.adb s-garuti.ads
-s-garuti.o: s-garlic.ads s-gardeb.ads s-garuti.ads s-garuti.adb
-s-gasoli.o: s-garlic.ads s-gardeb.ads s-gasoli.ads s-gasoli.adb
-s-gatcop.o: s-garlic.ads s-gardeb.ads s-garpro.ads s-gastha.ads s-garstr.ads s-gartcp.ads s-gatcop.ads s-garthi.ads s-gartyp.ads s-garuti.ads
-s-gtplsp.o: s-garlic.ads s-gtplsp.ads s-garthi.ads
-s-parint.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-ganata.ads s-garopt.ads s-garpar.ads s-gaphlo.ads s-garpro.ads s-garrem.ads s-gasoli.ads s-garsta.ads s-gastha.ads s-garstr.ads s-gartab.ads s-gartyp.ads s-garuni.ads s-garuti.ads s-parint.ads s-parint.adb s-rpc.ads
-s-rpc.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-gaphlo.ads s-garpro.ads s-gasoli.ads s-garsta.ads s-gastha.ads s-garstr.ads s-gartab.ads s-gartyp.ads s-garuni.ads s-garuti.ads s-rpc.ads s-rpc.adb s-rpcpoo.ads s-rpstio.ads
-s-rpcpoo.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-garopt.ads s-gaphlo.ads s-garpri.ads s-garpro.ads s-gasoli.ads s-gastha.ads s-garstr.ads s-gartyp.ads s-garuti.ads s-rpc.ads s-rpcpoo.ads s-rpcpoo.adb
-s-rpstio.o: s-garlic.ads s-gardeb.ads s-garhea.ads s-gaphlo.ads s-garpro.ads s-gastha.ads s-garstr.ads s-gartyp.ads s-garuti.ads s-rpc.ads s-rpstio.ads s-rpstio.adb
-s-stratt.o: s-stratt.adb
-split.o: split.adb
