@@ -10,10 +10,16 @@
 # program.
 
 #
-# Current version
+# If there is an argument on the command line, use it for the version number
 #
-gnat_version=`sed -n -e '/Gnat_Vers/s/[^"]*"\([^" ]*\).*/\1/p' ada/gnatvsn.ads`
-glade_version=${gnat_version}
+
+if test "x$1" != x; then
+  glade_version=`echo $1 | sed -e 's/^[^-]*-//'`
+  gnat_version=${glade_version}
+else
+  gnat_version=`sed -n -e '/Gnat_Vers/s/[^"]*"\([^" ]*\).*/\1/p' ada/gnatvsn.ads`
+  glade_version=${gnat_version}
+fi
 
 #
 # files hold the list of files in which substitutions will occur
